# hack-slash

./: LICENSE  README.md  default.nix  hack-slash.cabal  packages.nix
example/: Main.hs
src/: HackSlash.hs
src/HackSlash/: Component.hs  Game.hs  Utils.hs
src/HackSlash/Component/: Collider.hs  Entity.hs  Moveable.hs  Rotatable.hs  Scaleable.hs  Tag.hs  Transform.hs  Velocity.hs
src/HackSlash/Game/: Scene.hs  Time.hs
