name:                hack-slash
version:             0.1.0.0
synopsis:            Entity Component System Game Engine
description:         Please see README.md
homepage:            https://github.com/uncannyworks/hack-slash#readme
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian.jones@uncannyworks.com
copyright:           2016 Uncanny Works
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HackSlash
                     , HackSlash.Component
                     , HackSlash.Component.Collider
                     , HackSlash.Component.Entity
                     , HackSlash.Component.Moveable
                     , HackSlash.Component.Rotatable
                     , HackSlash.Component.Scaleable
                     , HackSlash.Component.Tag
                     , HackSlash.Component.Transform
                     , HackSlash.Component.Velocity
                     , HackSlash.Game
                     , HackSlash.Game.Scene
                     , HackSlash.Game.Time
                     , HackSlash.Utils
  build-depends:       base >= 4.7 && < 5
                     , clock >= 0.7 && <0.8
                     , containers >= 0.5 && <0.6
                     , lens >= 4.13 && <4.15
                     , linear >= 1.20 && <1.21
                     , mtl >= 2.2 && < 2.3
                     , random >= 1.1 && <1.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable hack-slash-example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-slash
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/uncannyworks/hack-slash
